# Rasterizer

./: .gitignore  CMakeLists.txt  Makefile  README.md  imgui.ini
include/: graphics.h  matrix.h  mesh.h  model.h  renderer.h  tgaimage.h  vec.h  vec3.h
src/: graphics.cpp  main.cpp  mesh.cpp  model.cpp  renderer.cpp  tgaimage.cpp
